--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2018"
 [dependencies]
 show-image = { version = "0.9.3", features = ["image"] }
 image = { version = "0.23.14" }
+rand = { version = "0.8.4" }
