--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "comp425"
+name = "miniSIFT"
 version = "0.1.0"
 edition = "2018"
 # resolver = "2"
@@ -10,7 +10,9 @@ show-image = { version = "0.9.3", features = ["image"] }
 image = { version = "0.23.14" }
 rand = { version = "0.8.4" }
 ndarray = "0.15.3"
-opencv = "0.53.2" 
+opencv = { version = "0.92.0", default-features = false, features = [
+  "calib3d",
+] }
 itertools = "0.10.1"
 statrs = "0.15.0"
 colorsys = "0.6.5"
